--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "bloodhound-js": "^1.2.3",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "mongoose": "^6.0.13",
     "numeral": "^2.0.6",
     "react-bootstrap": "^2.0.2"
   }
