--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,10 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "mongoose": "^6.0.13",
     "morgan": "~1.9.1"
   }
 }
