--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "axios": "^0.24.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
